--- a/RedingtonTechv2.0/appsettings.json
+++ b/RedingtonTechv2.0/appsettings.json
@@ -1,9 +1,7 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+    "LoggingDirectory": "C:\\Users\\fynnb\\source\\repos\\RedingtonTechv2.0",
+    "LogFilePrefix": "\\RedingtonLog_"
   },
   "AllowedHosts": "*"
 }
