--- a/redingtontechv2.0app/package.json
+++ b/redingtontechv2.0app/package.json
@@ -24,5 +24,6 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "vite": "^6.0.1"
-  }
+  },
+  "proxy": "http://localhost:55003"
 }
