--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@blueprintjs/core": "^5.16.0",
     "axios": "^1.7.8",
+    "react-scripts": "^5.0.1",
     "react-ui": "^1.0.0-beta.32"
   }
 }
