--- a/redingtontechv2.0app/package.json
+++ b/redingtontechv2.0app/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@rollup/rollup-linux-x64-gnu": "^4.9.2"
+    "react-dom": "^18.3.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
